compile gen-schema before gen for updated structs
